fixed logical syntax, semistandard style, added spaces after coma

--- a/web_dynamic/templates/1-hbnb.html
+++ b/web_dynamic/templates/1-hbnb.html
@@ -78,6 +78,6 @@
     <footer>
       <p>Holberton School</p>
     </footer>
-    <script src="static/scripts/1-hbnb.js"></script>
+    <script src="../static/scripts/1-hbnb.js"></script>
   </body>
 </html>
