--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -9,3 +9,13 @@ header .logo {
     left: 20px;
     height: 100%;
 }
+#api_status {
+    position: absolute;
+    right: 30px;
+    top: 15px;
+    text-align: right;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #CCCCCC;
+}
